...
                    onValueChange = viewModel::onEmail,
                    placeholder = "e.g. kemi2627@yahoo.com",
                    required = true,
                    asteriskColor = AirdropTheme.colors.orangeMain,
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Email),
                    fieldTag = "account-deletion-email-input",
                    cardTag = "account-deletion-email-card",
                )
                More2Field(
                    label = "Password",
                    value = state.password,
                    onValueChange = viewModel::onPassword,
                    placeholder = "**********",
...
